--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>Add Your Name</title>
 </head>
 <body>
-    <p>1. Varun</p>
-    <p>2. GDG   Chennai</p>
+    <p>1.susmitha</p>
+    <p>1st yearr</p>
     <p>3. C Abdul hakeem clg of Eng and Tech</p>
 </body>
 </html>
